# kizuna-ai-live-translator

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: ai_worker.py  azure_worker.py  database.py  main.py  models.py  schemas.py  socket_manager.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Fruits.jsx  PreacherDashboard.tsx
