[tool.poetry]
name = "kizuna-backend"
version = "0.1.0"
description = "Sermon AI Translation API"
authors = ["Admin"]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "0.136.3"
uvicorn = {extras = ["standard"], version = "0.48.0"}
sqlalchemy = "2.0.50"
asyncpg = "0.31.0"
websockets = "16.0"
gunicorn = "^23.0.0" 
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
