[tool.poetry]
name = "kizuna-backend"
version = "0.1.0"
description = "Sermon AI Translation API"
authors = ["Admin"]

[tool.poetry.dependencies]
# --- CORE FRAMEWORK ---
python = "^3.14"
fastapi = "0.136.3"
uvicorn = {extras = ["standard"], version = "0.48.0"}
sqlalchemy = "2.0.50"
asyncpg = "0.31.0"
websockets = "16.0"

# --- PRODUCTION SERVER ---
gunicorn = "^23.0.0"

# --- SECURITY & AUTH ---
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.1.0"

# --- TRANSLATION & UTILS ---
azure-cognitiveservices-speech = "1.50.0"
qrcode = "8.2"
pillow = "12.2.0"   # Required for generating QR images
requests = "2.34.2" # Standard HTTP client

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
